# Gliaxin

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  TODO.md  docker-compose.yml  smoke_test.py
backend/: Dockerfile  package.json  prisma.config.ts  requirements.txt
backend/database/: schema.prisma
backend/src/: api_key_auth.py  auth.py  bootstrap.py  database.py  key_hashing.py  logger.py  main.py  metrics.py  notify.py  worker.py
backend/src/providers/: __init__.py  base.py  claude.py  gemini.py  kimi.py  openai_provider.py
backend/src/routes/: agents.py  memory.py
integrations/claude-code/: README.md  fetch_memory.py  install.sh  save_memory.py  skill.md  tool_memory.py
integrations/codex/: README.md  common.py  fetch_memory.py  install.sh  save_memory.py  skill.md  tool_memory.py
integrations/copilot/: README.md  copilot-instructions.md  fetch_memory.py  install.sh  skill.md  vscode-tasks.json
integrations/cursor/: .cursorrules  README.md  install.sh  mcp_server.py  skill.md
integrations/openclaw/: HOOK.md  README.md  handler.ts  install.sh  package.json  skill.md
sdk/go/: agent.go  errors.go  gliaxin.go  go.mod  http.go  memory.go  types.go  wrap.go
sdk/python/: pyproject.toml
sdk/python/gliaxin/: __init__.py  _http.py  agent.py  client.py  exceptions.py  memory.py  types.py  wrap.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: agent.ts  client.ts  errors.ts  http.ts  index.ts  memory.ts  types.ts  wrap.ts
