[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gliaxin"
version = "0.1.0"
description = "Persistent, structured memory for AI agents"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://gliaxin.com"
Documentation = "https://gliaxin.com/docs"
